pyk/src/tests/unit/kore/test-data/definitions/pass/test-pattern-13.kore
[]

module TEST-PATTERN-13

  axiom{S}
    \floor{S,S}(X:S) []

endmodule []
