pyk/src/tests/unit/kore/test-data/definitions/should-fail/test-issue-94-1.kore
[]
module INJ
  sort KInt{} []
  symbol input{}(KInt{}) : KInt{} []
  axiom{} input{}(\dv{KInt{}}("1"), \dv{KInt{}}("1")) []
endmodule []
